--- a/Evaluate.ipynb
+++ b/Evaluate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,14 +95,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 40000/40000 [00:00<00:00, 376933.08it/s]\n"
+      "100%|██████████| 40000/40000 [00:00<00:00, 312753.36it/s]\n"
      ]
     },
     {
@@ -111,7 +111,7 @@
        "5089"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,14 +490,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 10,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "vocab_size = len(vocab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "EVALUATING AT BEAM SIZE 1: 100%|██████████| 5000/5000 [02:39<00:00, 31.40it/s]\n"
+      "\r",
+      "EVALUATING AT BEAM SIZE 1:   0%|          | 0/5000 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*************** Beam size of 1 ***************\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "EVALUATING AT BEAM SIZE 1: 100%|██████████| 5000/5000 [02:57<00:00, 28.17it/s]\n"
      ]
     },
     {
@@ -507,29 +533,31 @@
       "----- Bleu-n Scores -----\n",
       "1: 61.525192918747166\n",
       "2: 43.66082151386785\n",
-      "3: 30.667361192063407\n",
-      "4: 20.798872886259115\n",
-      "-------------------------\n"
+      "3: 30.303397415489165\n"
      ]
-    }
-   ],
-   "source": [
-    "vocab_size = len(vocab)\n",
-    "evaluate(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "EVALUATING AT BEAM SIZE 2: 100%|██████████| 5000/5000 [03:12<00:00, 25.98it/s]\n"
+      "\r",
+      "EVALUATING AT BEAM SIZE 2:   0%|          | 0/5000 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4: 20.798872886259115\n",
+      "-------------------------\n",
+      "*************** Beam size of 2 ***************\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "EVALUATING AT BEAM SIZE 2: 100%|██████████| 5000/5000 [03:21<00:00, 24.84it/s]\n"
      ]
     },
     {
@@ -539,22 +567,119 @@
       "----- Bleu-n Scores -----\n",
       "1: 63.507063764795724\n",
       "2: 45.79322947979045\n",
-      "3: 32.94907246692714\n",
+      "3: 32.58163864527692\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "EVALUATING AT BEAM SIZE 3:   0%|          | 0/5000 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "4: 22.867002491504053\n",
+      "-------------------------\n",
+      "*************** Beam size of 3 ***************\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "EVALUATING AT BEAM SIZE 3: 100%|██████████| 5000/5000 [03:45<00:00, 22.19it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----- Bleu-n Scores -----\n",
+      "1: 64.41970107332732\n",
+      "2: 46.950020348043495\n",
+      "3: 33.61342448730611\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "EVALUATING AT BEAM SIZE 4:   0%|          | 0/5000 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4: 23.741551285412378\n",
+      "-------------------------\n",
+      "*************** Beam size of 4 ***************\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "EVALUATING AT BEAM SIZE 4: 100%|██████████| 5000/5000 [04:04<00:00, 20.41it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----- Bleu-n Scores -----\n",
+      "1: 64.67672121688254\n",
+      "2: 47.06578886009424\n",
+      "3: 33.63430220292\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "EVALUATING AT BEAM SIZE 5:   0%|          | 0/5000 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4: 23.698329486227028\n",
+      "-------------------------\n",
+      "*************** Beam size of 5 ***************\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "EVALUATING AT BEAM SIZE 5: 100%|██████████| 5000/5000 [04:28<00:00, 18.63it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----- Bleu-n Scores -----\n",
+      "1: 64.14297768493323\n",
+      "2: 46.60952278554121\n",
+      "3: 33.24135363513261\n",
+      "4: 23.385001031257215\n",
       "-------------------------\n"
      ]
     }
    ],
    "source": [
-    "evaluate(2)"
+    "for i in range(1, 6):\n",
+    "    print('*'*15, f\"Beam size of {i}\", '*'*15)\n",
+    "    evaluate(i)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
