--- a/Evaluate.ipynb
+++ b/Evaluate.ipynb
@@ -680,6 +680,35 @@
     "    print('*'*15, f\"Beam size of {i}\", '*'*15)\n",
     "    evaluate(i)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "EVALUATING AT BEAM SIZE 3: 100%|██████████| 5000/5000 [03:37<00:00, 22.96it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----- Bleu-n Scores -----\n",
+      "1: 64.41970107332732\n",
+      "2: 46.950020348043495\n",
+      "3: 33.61342448730611\n",
+      "4: 23.741551285412378\n",
+      "-------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluate(3)"
+   ]
   }
  ],
  "metadata": {
