--- a/debug.ipynb
+++ b/debug.ipynb
@@ -48,7 +48,7 @@
     "\n",
     "# training parameters\n",
     "epochs = 1  # number of epochs to train for (if early stopping is not triggered)\n",
-    "batch_size = 124\n",
+    "batch_size = 128\n",
     "workers = 4\n",
     "encoder_lr = 1e-4  # learning rate for encoder if fine-tuning\n",
     "decoder_lr = 4e-4  # learning rate for decoder\n",
@@ -62,14 +62,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_NAME = 'BEST_checkpoint_flickr8k_5_cap_per_img_2_min_word_freq_resnet101_fullvocab_rmsprop.pth.tar'\n",
+    "DATA_NAME = 'flickr30k_5_cap_per_img_2_min_word_freq_resnet101'\n",
+    "\n",
+    "\n",
+    "# local 30k\n",
+    "DATA_JSON_PATH = 'data30.json'\n",
+    "IMGS_PATH = '/run/media/kelwa/DEV/data/flickr30k/Images/'\n",
     "\n",
     "# local\n",
-    "DATA_JSON_PATH = 'data.json'\n",
-    "IMGS_PATH = 'flickr/Images/'\n",
+    "# DATA_JSON_PATH = 'data.json'\n",
+    "# IMGS_PATH = 'flickr/Images/'\n",
     "# kaggle paths\n",
-    "# DATA_JSON_PATH = '/kaggle/working/Image-Captioning/data.json'\n",
-    "# IMGS_PATH = '../input/flickr8kimagescaptions/flickr8k/images/'"
+    "# DATA_JSON_PATH = '/kaggle/working/Image-Captioning/data30.json'\n",
+    "# IMGS_PATH = '../input/flickr30k/Images/'"
    ]
   },
   {
@@ -83,7 +88,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 40000/40000 [00:00<00:00, 296712.91it/s]\n"
+      "100%|██████████| 155070/155070 [00:00<00:00, 297615.10it/s]\n"
      ]
     }
    ],
@@ -100,7 +105,7 @@
     {
      "data": {
       "text/plain": [
-       "5089"
+       "12096"
       ]
      },
      "execution_count": 6,
@@ -166,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -174,21 +179,21 @@
      "output_type": "stream",
      "text": [
       "Dataset split: train\n",
-      "Unique images: 6000\n",
-      "Total size: 30000\n",
+      "Unique images: 29000\n",
+      "Total size: 145000\n",
       "Dataset split: val\n",
-      "Unique images: 1000\n",
-      "Total size: 5000\n"
+      "Unique images: 1014\n",
+      "Total size: 5070\n"
      ]
     }
    ],
    "source": [
-    "train_loader, _ = get_loaders(1, IMGS_PATH, DATA_JSON_PATH, transform, vocab)"
+    "_, val_loader = get_loaders(128, IMGS_PATH, DATA_JSON_PATH, transform, vocab)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,12 +230,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation: [0/40]\tBatch Time 2.644 (2.644)\tLoss 10.3171 (10.3171)\tTop-5 Accuracy 0.000 (0.000)\t\n",
+      "----- Bleu-n Scores -----\n",
+      "1: 0\n",
+      "2: 0\n",
+      "3: 0\n",
+      "4: 0\n",
+      "-------------------------\n",
+      "\n",
+      " * LOSS - 10.317, TOP-5 ACCURACY - 0.000, BLEU-4 - 0\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "bl4 = validate(val_loader, encoder, decoder, criterion, vocab)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "scores, targets = train(train_loader, encoder, decoder, criterion, encoder_optimizer, decoder_optimizer, 1)"
+    "bl4"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(128, 5, 22)"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(refs), len(refs[0]), len(refs[0][0])  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(128, 14)"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(hyps), len(hyps[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----- Bleu-n Scores -----\n",
+      "1: 0\n",
+      "2: 0\n",
+      "3: 0\n",
+      "4: 0\n",
+      "-------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_scores(refs, hyps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -255,7 +369,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -309,7 +425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
