flickr30 scores no finetune

--- a/Scores.ipynb
+++ b/Scores.ipynb
@@ -39,9 +39,9 @@
    "outputs": [],
    "source": [
     "# paths\n",
-    "MODEL_PATH = 'models/BEST_checkpoint_flickr8k_5_cap_per_img_2_min_word_freq_resnet101_fullvocab_fix_ds_rmsprop_finetune.pth.tar'\n",
-    "DATA_PATH = 'data.json'\n",
-    "IMGS_PATH = 'flickr/Images/'"
+    "MODEL_PATH = 'models/BEST_checkpoint_flickr30k_5_cap_per_img_2_min_word_freq_resnet101_prefinetune.pth.tar'\n",
+    "DATA_PATH = 'data30.json'\n",
+    "IMGS_PATH = '/run/media/kelwa/DEV/data/flickr30k/Images/'"
    ]
   },
   {
@@ -54,7 +54,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 40000/40000 [00:00<00:00, 405330.96it/s]\n"
+      "100%|██████████| 155070/155070 [00:00<00:00, 263748.31it/s]\n"
      ]
     },
     {
@@ -62,8 +62,8 @@
      "output_type": "stream",
      "text": [
       "Loaded Checkpoint!!\n",
-      "Last Epoch: 12\n",
-      "Best Bleu-4: 0.1655661704030113\n"
+      "Last Epoch: 7\n",
+      "Best Bleu-4: 0.16813591633971395\n"
      ]
     }
    ],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "ba7f0160",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "7410884e",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
        "'cuda'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "57429326",
    "metadata": {},
    "outputs": [],
@@ -138,33 +138,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "5cc23a3e",
+   "execution_count": 10,
+   "id": "7b9fc523",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation: [0/20]\tBatch Time 6.599 (6.599)\tLoss 5.2896 (5.2896)\tTop-5 Accuracy 62.193 (62.193)\t\n",
+      "Validation: [0/20]\tBatch Time 24.277 (24.277)\tLoss 4.0601 (4.0601)\tTop-5 Accuracy 65.435 (65.435)\t\n",
       "----- Bleu-n Scores -----\n",
-      "1: 66.80474123326347\n",
-      "2: 43.31300850079059\n",
-      "3: 26.938996244889484\n",
-      "4: 16.409407808472437\n",
+      "1: 63.60751361363036\n",
+      "2: 40.157385243048395\n",
+      "3: 24.72388333611516\n",
+      "4: 15.861417407917672\n",
       "-------------------------\n",
       "\n",
-      " * LOSS - 5.270, TOP-5 ACCURACY - 63.094, BLEU-4 - 0.1653368117869597\n",
+      " * LOSS - 3.887, TOP-5 ACCURACY - 68.169, BLEU-4 - 0.15861417407917672\n",
       "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.1653368117869597"
+       "0.15861417407917672"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
