--- a/Evaluate.ipynb
+++ b/Evaluate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,15 +29,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "# local\n",
-    "DATA_JSON_PATH = 'data.json'\n",
-    "IMGS_PATH = 'flickr/Images/'\n",
-    "CHECKPOINT_PATH = 'models/BEST_checkpoint_flickr8k_5_cap_per_img_2_min_word_freq_resnet101_fullvocab_fix_ds_rmsprop_finetune.pth.tar'\n",
+    "DATA_JSON_PATH = 'data30.json'\n",
+    "IMGS_PATH = '/run/media/kelwa/DEV/data/flickr30k/Images/'\n",
+    "CHECKPOINT_PATH = 'models/BEST_checkpoint_flickr30k_5_cap_per_img_2_min_word_freq_resnet101_prefinetune.pth.tar'\n",
     "# kaggle paths\n",
     "# DATA_JSON_PATH = '/kaggle/working/Image-Captioning/data.json'\n",
     "# IMGS_PATH = '../input/flickr8kimagescaptions/flickr8k/images/'\n"
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -63,8 +63,8 @@
      "output_type": "stream",
      "text": [
       "Loaded Checkpoint!!\n",
-      "Last Epoch: 12\n",
-      "Best Bleu-4: 0.1655661704030113\n"
+      "Last Epoch: 7\n",
+      "Best Bleu-4: 0.16813591633971395\n"
      ]
     }
    ],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,23 +95,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 40000/40000 [00:00<00:00, 312753.36it/s]\n"
+      "100%|██████████| 155070/155070 [00:00<00:00, 222454.97it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "5089"
+       "12096"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,8 +155,8 @@
     "import torchvision.transforms as transforms\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.cm as cm\n",
-    "import skimage.transform\n",
-    "import argparse\n",
+    "# import skimage.transform\n",
+    "# import argparse\n",
     "from PIL import Image\n",
     "def caption_image_beam_search(encoder, decoder, image_path, word_map, beam_size=3):\n",
     "\n",
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,16 +291,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 4, 5, 65, 13, 99, 856, 2]"
+       "[1, 9, 101, 236, 6, 9, 426, 2]"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -319,11 +319,11 @@
     {
      "data": {
       "text/plain": [
-       "['<sos> a dog runs through an obstacle <eos>',\n",
-       " '<sos> a dog jumps over a hurdle <eos>']"
+       "['<sos> a dog running in a field <eos>',\n",
+       " '<sos> a dog running in a grassy field <eos>']"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,16 +334,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['<sos>', 'a', 'dog', 'runs', 'through', 'an', 'obstacle', '<eos>']"
+       "['<sos>', 'a', 'dog', 'running', 'in', 'a', 'field', '<eos>']"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,14 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +459,9 @@
     "            if step > 50:\n",
     "                break\n",
     "            step += 1\n",
-    "\n",
+    "        \n",
+    "        if len(complete_seqs_scores) == 0:\n",
+    "            continue\n",
     "        i = complete_seqs_scores.index(max(complete_seqs_scores))\n",
     "        seq = complete_seqs[i]\n",
     "\n",
@@ -490,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +494,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "EVALUATING AT BEAM SIZE 2: 100%|██████████| 5000/5000 [06:23<00:00, 13.04it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----- Bleu-n Scores -----\n",
+      "1: 61.4238120287568\n",
+      "2: 43.275355242426095\n",
+      "3: 30.18046205131241\n",
+      "4: 21.053627908552482\n",
+      "-------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluate(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "EVALUATING AT BEAM SIZE 3: 100%|██████████| 5000/5000 [04:32<00:00, 18.34it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----- Bleu-n Scores -----\n",
+      "1: 62.871832537642305\n",
+      "2: 44.292721910368876\n",
+      "3: 30.864974410267394\n",
+      "4: 21.53056172815266\n",
+      "-------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluate(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "EVALUATING AT BEAM SIZE 1: 100%|██████████| 5000/5000 [03:35<00:00, 23.15it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----- Bleu-n Scores -----\n",
+      "1: 59.62026352401997\n",
+      "2: 41.45438962548781\n",
+      "3: 28.514820536432968\n",
+      "4: 19.65818028831556\n",
+      "-------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluate(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {
     "scrolled": false
    },
@@ -523,7 +605,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "EVALUATING AT BEAM SIZE 1: 100%|██████████| 5000/5000 [02:57<00:00, 28.17it/s]\n"
+      "EVALUATING AT BEAM SIZE 1: 100%|██████████| 5000/5000 [03:21<00:00, 24.82it/s]\n"
      ]
     },
     {
@@ -531,9 +613,9 @@
      "output_type": "stream",
      "text": [
       "----- Bleu-n Scores -----\n",
-      "1: 61.525192918747166\n",
-      "2: 43.66082151386785\n",
-      "3: 30.303397415489165\n"
+      "1: 59.62026352401997\n",
+      "2: 41.45438962548781\n",
+      "3: 28.514820536432968\n"
      ]
     },
     {
@@ -548,7 +630,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4: 20.798872886259115\n",
+      "4: 19.65818028831556\n",
       "-------------------------\n",
       "*************** Beam size of 2 ***************\n"
      ]
@@ -557,7 +639,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "EVALUATING AT BEAM SIZE 2: 100%|██████████| 5000/5000 [03:21<00:00, 24.84it/s]\n"
+      "EVALUATING AT BEAM SIZE 2: 100%|██████████| 5000/5000 [04:09<00:00, 20.03it/s]\n"
      ]
     },
     {
@@ -565,9 +647,9 @@
      "output_type": "stream",
      "text": [
       "----- Bleu-n Scores -----\n",
-      "1: 63.507063764795724\n",
-      "2: 45.79322947979045\n",
-      "3: 32.58163864527692\n"
+      "1: 61.4238120287568\n",
+      "2: 43.275355242426095\n",
+      "3: 30.18046205131241\n"
      ]
     },
     {
@@ -582,7 +664,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4: 22.867002491504053\n",
+      "4: 21.053627908552482\n",
       "-------------------------\n",
       "*************** Beam size of 3 ***************\n"
      ]
@@ -591,7 +673,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "EVALUATING AT BEAM SIZE 3: 100%|██████████| 5000/5000 [03:45<00:00, 22.19it/s]\n"
+      "EVALUATING AT BEAM SIZE 3: 100%|██████████| 5000/5000 [04:00<00:00, 20.79it/s]\n"
      ]
     },
     {
@@ -599,9 +681,9 @@
      "output_type": "stream",
      "text": [
       "----- Bleu-n Scores -----\n",
-      "1: 64.41970107332732\n",
-      "2: 46.950020348043495\n",
-      "3: 33.61342448730611\n"
+      "1: 62.871832537642305\n",
+      "2: 44.292721910368876\n",
+      "3: 30.864974410267394\n"
      ]
     },
     {
@@ -616,7 +698,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4: 23.741551285412378\n",
+      "4: 21.53056172815266\n",
       "-------------------------\n",
       "*************** Beam size of 4 ***************\n"
      ]
@@ -625,7 +707,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "EVALUATING AT BEAM SIZE 4: 100%|██████████| 5000/5000 [04:04<00:00, 20.41it/s]\n"
+      "EVALUATING AT BEAM SIZE 4: 100%|██████████| 5000/5000 [06:21<00:00, 13.12it/s]\n"
      ]
     },
     {
@@ -633,9 +715,9 @@
      "output_type": "stream",
      "text": [
       "----- Bleu-n Scores -----\n",
-      "1: 64.67672121688254\n",
-      "2: 47.06578886009424\n",
-      "3: 33.63430220292\n"
+      "1: 63.22916666666667\n",
+      "2: 44.56638923183232\n",
+      "3: 31.18450874712517\n"
      ]
     },
     {
@@ -650,7 +732,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4: 23.698329486227028\n",
+      "4: 21.857565974982023\n",
       "-------------------------\n",
       "*************** Beam size of 5 ***************\n"
      ]
@@ -659,7 +741,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "EVALUATING AT BEAM SIZE 5: 100%|██████████| 5000/5000 [04:28<00:00, 18.63it/s]\n"
+      "EVALUATING AT BEAM SIZE 5: 100%|██████████| 5000/5000 [06:15<00:00, 13.32it/s]\n"
      ]
     },
     {
@@ -667,10 +749,10 @@
      "output_type": "stream",
      "text": [
       "----- Bleu-n Scores -----\n",
-      "1: 64.14297768493323\n",
-      "2: 46.60952278554121\n",
-      "3: 33.24135363513261\n",
-      "4: 23.385001031257215\n",
+      "1: 63.77050771769731\n",
+      "2: 44.95056791638245\n",
+      "3: 31.482991527519317\n",
+      "4: 22.05915378840812\n",
       "-------------------------\n"
      ]
     }
@@ -679,35 +761,6 @@
     "for i in range(1, 6):\n",
     "    print('*'*15, f\"Beam size of {i}\", '*'*15)\n",
     "    evaluate(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "EVALUATING AT BEAM SIZE 3: 100%|██████████| 5000/5000 [03:37<00:00, 22.96it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "----- Bleu-n Scores -----\n",
-      "1: 64.41970107332732\n",
-      "2: 46.950020348043495\n",
-      "3: 33.61342448730611\n",
-      "4: 23.741551285412378\n",
-      "-------------------------\n"
-     ]
-    }
-   ],
-   "source": [
-    "evaluate(3)"
    ]
   }
  ],
@@ -727,7 +780,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
